k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${K8S_APP_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  replicas: ${K8S_REPLICAS}
  selector:
    matchLabels:
      app: ${K8S_APP_NAME}
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ${K8S_APP_NAME}
    spec:
      containers:
        - name: ${K8S_APP_NAME}-container
          image: ${DOCKER_IMAGE_FULL_NAME}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: ${K8S_APP_PORT}
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: ${K8S_APP_PORT}
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              memory: ${K8S_MEM_REQ}
            limits:
              memory: ${K8S_MEM_LIM}
          ports:
            - name: ${K8S_APP_PORT_NAME}
              containerPort: ${K8S_APP_PORT}
          volumeMounts:
            - name: ${K8S_DATA_PVC_NAME}
              mountPath: /app/data
      volumes:
        - name: ${K8S_DATA_PVC_NAME}
          persistentVolumeClaim:
            claimName: ${K8S_DATA_PVC_NAME}
