k8s/service-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_APP_NAME}-service
  namespace: ${K8S_NAMESPACE}
spec:
  type: ${K8S_SERVICE_TYPE}
  selector:
    app: ${K8S_APP_NAME}
  ports:
    - name: ${K8S_SERVICE_PORT_NAME}
      port: ${K8S_SERVICE_PORT}
      targetPort: ${K8S_APP_PORT}
