k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f5-${K8S_NAMESPACE}-${K8S_APP_NAME}
  namespace: ${K8S_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: ${K8S_INGRESS_CLASS_NAME}
    virtual-server.f5.com/ip: "${K8S_INGRESS_IP}"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/allow-http: "false"
spec:
  ingressClassName: ${K8S_INGRESS_CLASS_NAME}
  rules:
    - host: ${K8S_INGRESS_DNS_URL}
      http:
        paths:
          - path: ${K8S_INGRESS_SERVICE_PATH}
            pathType: Prefix
            backend:
              service:
                name: ${K8S_APP_NAME}-service
                port:
                  number: ${K8S_SERVICE_PORT}
